[package]
name = "jstream-ext"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2"
futures = "0.3"

[features]
sink = []
default = ["sink"]