[package]
name = "jstream-ext"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["futures", "async", "streams"]
description = "A crate which adds some extra extensions to futures Stream traits."
homepage = "https://github.com/Twister915/jstream-ext"
repository = "https://github.com/Twister915/jstream-ext"
readme = "README.md"

[dependencies]
pin-project-lite = "0.2"
futures = "0.3"

[features]
sink = []
default = ["sink"]